tambah fitur posting

--- a/main.html
+++ b/main.html
@@ -8,17 +8,24 @@
     <br>
   </head>
   <body>
-    hello world!
-    <ol>
-      <li>test</li>
-      <li>test</li>
-      <li>test</li>
-    </ol>
+    <br>
+    <h2>Postingan</h2>
+    <div name="list_postingan">
+      Loading postingan...
+    </div>
+
+    <br>
+    <br>
+    <button name="latest_button">&lt&lt</button>
+    <button name="previous_button">&lt</button>
+    <div name="page_number" style="display: inline;"> Page Ke- </div>
+    <button name="next_button">&gt</button>
   </body>
 
 
   <script src="includes/jquery-3.7.0.min.js"></script>
-  <script src="includes/backend.js""></script>
+  <script src="includes/backend.js"></script>
 
   <script src="check_login.js"></script>
+  <script src="ambil_post.js"></script>
 </html>
