--- a/ls.html
+++ b/ls.html
@@ -1,6 +1,10 @@
 <!--- Untuk login dan signup -->
 
 <html>
+  <head>
+    <title>Login/Signup</title>
+  </head>
+
   <body>
     <h2>Login / Sign Up</h2>
     <div name="errormsg" style="color:red" hidden></div>
